%% CS17 Portal — current data model (Mermaid ER diagram)
%% Edit this text and re-render; renders natively on GitHub / VS Code / mermaid.live
erDiagram
    CS17_Cohort ||--o{ CS17_Profile : "cohort"
    CS17_Cohort ||--o{ CS17_Assignment : "cohort"
    CS17_Profile ||--o{ CS17_Project : "student"
    CS17_Profile ||--o{ CS17_Assignment_Submission : "student"
    CS17_Assignment ||--o{ CS17_Assignment_Submission : "assignment"
    CS17_Assignment ||--o{ CS17_Assignment_Grade : "assignment"
    CS17_Project ||--o{ CS17_Assignment_Submission : "project (Scratch only)"
    CS17_Assignment_Submission ||--|| CS17_Assignment_Grade : "submission"
    CS17_Cohort ||--o{ CS17_Exam : "cohort"
    CS17_Grading_Scale ||--o{ CS17_Grade_Band : "bands"
    CS17_Grading_Scale ||--o{ CS17_Exam : "grading_scale (default)"
    CS17_Grading_Scale ||--o{ CS17_Exam_Subject : "grading_scale (override)"
    CS17_Profile ||--o{ CS17_Exam_Subject : "examiner"
    CS17_Exam ||--o{ CS17_Exam_Subject : "subjects"
    CS17_Subject ||--o{ CS17_Exam_Subject : "subject"
    CS17_Exam ||--o{ CS17_Result : "exam"
    CS17_Profile ||--o{ CS17_Result : "student"
    CS17_Result ||--o{ CS17_Result_Subject_Score : "scores"
    CS17_Subject ||--o{ CS17_Result_Subject_Score : "subject"
    CS17_Quarter ||--o{ CS17_Assignment : "quarter"
    CS17_Quarter ||--o{ CS17_Exam : "quarter"
    CS17_Quarter ||--o{ CS17_Result : "quarter"
    CS17_Result ||--o{ CS17_Result_Assignment_Score : "assignments"
    CS17_Assignment ||--o{ CS17_Result_Assignment_Score : "assignment"

    CS17_Cohort {
        Data cohort_code PK
        Date start_date
    }
    CS17_Profile {
        Select profile_type "Student | Faculty"
        Data full_name
        Link cohort FK "CS17 Cohort"
        Link user FK "User"
    }
    CS17_Quarter {
        Data quarter_name PK "Q1, Q2, Q3..."
        Date start_date
        Date end_date
    }
    CS17_Assignment {
        Data title
        Link cohort FK "CS17 Cohort"
        Link quarter FK "CS17 Quarter"
        Select assignment_type "Graded | Not Graded"
        Select submission_type "Any|PDF|URL|Image|ZIP|Scratch"
        Float max_marks
        Check is_published
    }
    CS17_Project {
        Data project_title
        Link student FK "CS17 Profile"
        Attach sb3_file "live .sb3"
        AttachImage thumbnail
        Datetime last_saved_at
    }
    CS17_Assignment_Submission {
        Link assignment FK "CS17 Assignment"
        Link student FK "CS17 Profile"
        Link project FK "CS17 Project (Scratch)"
        Attach submission_document ".sb3 snapshot / file"
        Data submission_url
        Datetime submitted_at
    }
    CS17_Assignment_Grade {
        Link assignment FK "CS17 Assignment"
        Link submission FK "CS17 Assignment Submission"
        Float marks_obtained
        Select grade "A..E"
        Link graded_by FK "User"
        Check is_published
    }
    CS17_Subject {
        Data subject_code PK
        Data subject_name
        Check is_active
    }
    CS17_Grading_Scale {
        Data scale_name PK
        Float passing_percentage
        Check is_default
    }
    CS17_Grade_Band {
        Data grade
        Float min_percent
        Float max_percent
        Float grade_point
    }
    CS17_Exam {
        Data exam_name
        Link cohort FK "CS17 Cohort"
        Link quarter FK "CS17 Quarter"
        Link grading_scale FK "CS17 Grading Scale"
        Date start_date
        Float total_max_marks "derived"
    }
    CS17_Exam_Subject {
        Link subject FK "CS17 Subject"
        Float max_marks
        Link grading_scale FK "CS17 Grading Scale (overrides exam)"
        Link examiner FK "CS17 Profile (Faculty)"
    }
    CS17_Result {
        Link exam FK "CS17 Exam"
        Link quarter FK "CS17 Quarter (defaults from exam)"
        Link student FK "CS17 Profile"
        Link cohort FK "CS17 Cohort (fetched)"
        Float percentage "derived, exam only"
        Data overall_grade "derived"
        Select result_status "Pass | Fail"
        Check is_published
    }
    CS17_Result_Assignment_Score {
        Link assignment FK "CS17 Assignment"
        Float max_marks "from assignment, Marks only"
        Float marks_obtained "from CS17 Assignment Grade, Marks only"
        Data grade "from CS17 Assignment Grade, Grade only"
        Check is_submitted "derived"
    }
    CS17_Result_Subject_Score {
        Link subject FK "CS17 Subject"
        Float max_marks "from exam"
        Link grading_scale FK "CS17 Grading Scale (from exam)"
        Float marks_obtained
        Float percentage "derived"
        Data grade "derived"
        Check is_pass "derived"
    }
